[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bdist_wheel]
universal = true

[tool.setuptools]
packages = ["encrypted_id"]

[project]
name = "django-encrypted-id"
version = "0.4.0"
authors = [
    {name = "Fabian Witt"},
]
description = "Encrypted IDs for Django Models"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["Django", "Encryption"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "django>=3.2.17,<4.0.0",
    'pycryptodomex==3.17',
]
