[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bdist_wheel]
universal = true

[tool.setuptools]
packages = ["encrypted_id"]

[project]
name = "django-encrypted-id"
version = "0.5.0"
authors = [
    {name = "Fabian Witt"},
]
description = "Encrypted IDs for Django Models"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["Django", "Encryption"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "django>=4.2.6,<5.0.0",
    'pycryptodomex==3.19.0',
]
