[metadata]
name = django-encrypted-id
version = 0.4.0
description = Encrypted IDs for Django Models
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Fabian Witt
url = https://github.com/wittfabian/django-encrypted-id

license = MIT
keywords =
    Django
    Encryption
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Encryption
license_file = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
    django>=2.2.24,<3.0.0
    pycryptodomex
python_requires = ==3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 1

